# h4kstream

./: .env.example  .gitignore  ARCHITECTURE.md  Caddyfile  Makefile  TODO.org  compose.yaml  readme.md
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  generate_openapi_spec.py  playlist.json  pyproject.toml
backend/app/: dependencies.py  exceptions.py  main.py  models.py  run.py  settings.py  types.py
backend/app/db/: __init__.py  models.py  recordings.py
backend/app/routes/: admin.py  internal.py  metadata.py  public.py  recordings.py  shows.py  users.py  webhooks.py
backend/app/services/: crud_service.py  event_publisher.py  ffmpeg.py  jwt_service.py  livestream_service.py  mpd_instances.py  mpd_service.py  password_service.py  playback_service.py  queue_service.py  recording_worker.py  redis_service.py  webhook_delivery.py  webhook_worker.py  youtube_dl.py
backend/tests/: conftest.py  test_api.py  test_auth_models.py  test_livestream.py  test_playback_service.py  test_queue_service.py  test_youtube_dl.py
docs/: WEBHOOKS.md  api.md  authentication.md  livestream.md
e2e/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
e2e/tests/: __init__.py  api_endpoints.py  conftest.py  test_auth_flow.py  test_livestream.py  test_livestream_recording.py  test_metadata.py  test_queue_limits.py  test_redis_persistence.py  test_webhooks.py
examples/: README.md  darkice.cfg  ffmpeg-stream.sh
frontend/: Dockerfile  generate_api_client.sh  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/api/: ApiClient.ts  index.ts
frontend/src/api/core/: OpenAPI.ts  request.ts
frontend/src/api/models/: AddSongRequest.ts  Body_add_song_queue_add_post.ts  Body_admin_add_song_admin_queue_add_post.ts  DeleteSongRequest.ts  ErrorResponse.ts  LivestreamTokenCreateRequest.ts  LivestreamTokenResponse.ts  NowPlayingMetadata.ts  NowPlayingResponse.ts  PendingUserCreate.ts  PendingUserPublic.ts  RecordingMetadata.ts  RecordingsListResponse.ts  ShowCreate.ts  ShowPublic.ts  ShowRecordings.ts  ShowUpdate.ts  SongAddedResponse.ts  SongItem.ts  SuccessResponse.ts  TokenCreateRequest.ts  TokenCreateResponse.ts  UserCreate.ts  UserLogin.ts  UserPublic.ts  UserUpdate.ts  WebhookDelivery.ts  WebhookStats.ts  WebhookSubscription.ts  WebhookSubscriptionRequest.ts  WebhookSubscriptionResponse.ts
frontend/src/api/services/: AdminService.ts  DefaultService.ts  MetadataService.ts  PublicService.ts  QueueService.ts  RecordingsService.ts  ShowsService.ts  UsersService.ts  WebhooksService.ts
frontend/src/components/: AddSong.tsx  ArchivesTab.tsx  AudioPlayer.test.tsx  AudioPlayer.tsx  MetadataDisplay.test.tsx  MetadataDisplay.tsx  Player.tsx  Playlist.tsx  QueueList.tsx
frontend/src/pages/: AdminPage.tsx  ArchiveDetailPage.tsx  HomePage.tsx  LoginPage.tsx  ManagePage.tsx  SignupPage.tsx
frontend/src/utils/: apiClient.ts  auth.ts
icecast/: icecast.xml
liquidsoap/: radio.liq
mpd/: mpd-fallback.conf  mpd.conf
