[project]
name = "hackstream-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "python-mpd2>=3.1.1",
    "redis>=5.2.0",
    "yt-dlp>=2024.12.23",
    "pydantic-settings>=2.7.0",
    "pytest-asyncio>=0.25.0",
    "python-multipart>=0.0.20",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "types-redis>=4.6.0.20241004",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
follow_imports = "silent"
warn_redundant_casts = true
disallow_any_generics = false
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = 'py312'
extend-exclude = ["tests/data"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint]
extend-select = [
    "F", "W", "I", "UP"
]

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120
in-place = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
